--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.23.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@nanostores/react": "^0.7.2",
+    "buffer": "^6.0.3",
     "jose": "^5.6.3",
     "nanostores": "^0.10.3"
   },
