--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aptimus-sdk-test",
-  "version": "1.1.7",
-  "description": "",
+  "name": "@weminal/aptimus",
+  "version": "0.0.1",
+  "description": "TODO: Description",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/cjs/index.d.ts",
