--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@weminal/aptimus",
+  "name": "aptimus",
   "version": "0.0.1",
   "description": "TODO: Description",
   "main": "./dist/cjs/index.js",
