--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aptimus",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "TODO: Description",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -35,9 +35,12 @@
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^1.23.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@nanostores/react": "^0.7.2",
+    "buffer": "^6.0.3",
     "jose": "^5.6.3",
-    "nanostores": "^0.10.3"
+    "nanostores": "^0.10.3",
+    "vite-plugin-mkcert": "^1.17.6"
   },
   "files": [
     "dist",
